--- a/grids.html
+++ b/grids.html
@@ -1,70 +1,67 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
-    <title>Bootstrap Grids</title>
-	<style>
-	
-	.demo{
-	padding:15px;
-	min-height: 300px;
-	background-color:  #dbdfe5;
-	margin-bottom:10px;
-	}
-	
-	.container{
-	margin-top: 20px;	
-	}
-	
-	</style>
-	
-  </head>
-  <body>
-    <h1>Testing Bootstrap Grids</h1>
-	
-<div class="container">
-<h2>2, 3, 4 Grid - Equal Width</h2>
-<div class="row">
-	<div class="col">
-		<div class="demo">1 of 2</div>
-	</div>
-	<div class="col">
-		<div class="demo">2 of 2</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col">
-		<div class="demo">1 of 3</div>
-	</div>
-	<div class="col">
-		<div class="demo">2 of 3</div>
-	</div>
-	<div class="col">
-		<div class="demo">3 of 3</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col">
-		<div class="demo">1 of 4</div>
-	</div>
-	<div class="col">
-		<div class="demo">2 of 4</div>
-	</div>
-	<div class="col">
-		<div class="demo">3 of 4</div>
-	</div>
-	<div class="col">
-		<div class="demo">4 of 4</div>
-	</div>
-</div>
-</div>
-
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Bootstrap CSS -->
+  		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+		
+		<title>Bootstrap Grids</title>	
+		<!-- Add CSS to display containers as grey boxes -->
+		<style>
+		.demo{
+		padding:15px;
+		min-height: 300px;
+		background-color:  #dbdfe5;
+		margin-bottom:10px;
+		}	
+		.container{
+		margin-top: 20px;	
+		}
+		</style>
+ 	 </head>
+  	<body>
+   		<h1>Testing Bootstrap Grids</h1>
+		<!-- Create a row with two grids of equal width -->
+		<div class="container">
+		<h2>2, 3, 4 Grid - Equal Width</h2>
+			<div class="row">
+				<div class="col">
+					<div class="demo">1 of 2</div>
+				</div>
+				<div class="col">
+					<div class="demo">2 of 2</div>
+				</div>
+			</div>
+		<!-- Create a row with three grids of equal width -->
+		<div class="row">
+			<div class="col">
+				<div class="demo">1 of 3</div>
+			</div>
+			<div class="col">
+				<div class="demo">2 of 3</div>
+			</div>
+			<div class="col">
+				<div class="demo">3 of 3</div>
+			</div>
+		</div>
+		<!-- Create a row with four grids of equal width -->
+		<div class="row">
+			<div class="col">
+				<div class="demo">1 of 4</div>
+			</div>
+			<div class="col">
+				<div class="demo">2 of 4</div>
+			</div>
+			<div class="col">
+				<div class="demo">3 of 4</div>
+			</div>
+			<div class="col">
+				<div class="demo">4 of 4</div>
+			</div>
+		</div>
+			
 <div class="container">
 <h1>Set Column Width 6 + 6</h1>
 <div class="row">
