--- a/grids.html
+++ b/grids.html
@@ -61,18 +61,18 @@
 				<div class="demo">4 of 4</div>
 			</div>
 		</div>
-			
-<div class="container">
-<h1>Set Column Width 6 + 6</h1>
-<div class="row">
-	<div class="col-sm-6">
-		<div class="demo">.col-sm-6</div>
-	</div>
-	<div class="col-sm-6">
-		<div class="demo">.col-sm-6</div>
-	</div>
-</div>
-</div>
+		<!-- Create a row of grid columns with the set width of 4 + 8 -->	
+		<div class="container">
+		<h1>Set Column Width 6 + 6</h1>
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="demo">.col-sm-6</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="demo">.col-sm-6</div>
+				</div>
+			</div>
+		</div>
 
 <div class="container">
 <h1>Set Column Width 4 + 8</h1>
