--- a/grids.html
+++ b/grids.html
@@ -104,50 +104,53 @@
 		</div>
 		</div>
 
-<div class="container">
-<h1>Set Column Width 4 + 4 + 4</h1>
-<div class="row">
-	<div class="col-md-4">
-		<div class="demo">.col-md-4</div>
-	</div>
-	<div class="col-md-4">
-		<div class="demo">.col-md-4</div>
-	</div>
-	<div class="col-md-4">
-		<div class="demo">.col-md-4</div>
-	</div>
-</div>
-</div>
+		<!-- Create a row of grid columns with the set width of 4 + 4 + 4 -->
+		<div class="container">
+		<h1>Set Column Width 4 + 4 + 4</h1>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="demo">.col-md-4</div>
+			</div>
+			<div class="col-md-4">
+				<div class="demo">.col-md-4</div>
+			</div>
+			<div class="col-md-4">
+				<div class="demo">.col-md-4</div>
+			</div>
+		</div>
+		</div>
 
-<div class="container">
-<h1>Set Column Width 2 + 8 + 2</h1>
-<div class="row">
-	<div class="col-md-2">
-		<div class="demo">.col-md-2</div>
-	</div>
-	<div class="col-md-8">
-		<div class="demo">.col-md-8</div>
-	</div>
-	<div class="col-md-2">
-		<div class="demo">.col-md-2</div>
-	</div>
-</div>
-</div>
+		<!-- Create a row of grid columns with the set width of 2 + 8 + 2 -->
+		<div class="container">
+		<h1>Set Column Width 2 + 8 + 2</h1>
+		<div class="row">
+			<div class="col-md-2">
+				<div class="demo">.col-md-2</div>
+			</div>
+			<div class="col-md-8">
+				<div class="demo">.col-md-8</div>
+			</div>
+			<div class="col-md-2">
+				<div class="demo">.col-md-2</div>
+			</div>
+		</div>
+		</div>
 
-<div class="container">
-<h1>Set Column Width 3 + 7 + 2</h1>
-<div class="row">
-	<div class="col-md-3">
-		<div class="demo">.col-md-3</div>
-	</div>
-	<div class="col-md-7">
-		<div class="demo">.col-md-7</div>
-	</div>
-	<div class="col-md-2">
-		<div class="demo">.col-md-2</div>
-	</div>
-</div>
-</div>
+		<!-- Create a row of grid columns with the set width of 3 + 7 + 2 -->
+		<div class="container">
+		<h1>Set Column Width 3 + 7 + 2</h1>
+		<div class="row">
+			<div class="col-md-3">
+				<div class="demo">.col-md-3</div>
+			</div>
+			<div class="col-md-7">
+				<div class="demo">.col-md-7</div>
+			</div>
+			<div class="col-md-2">
+				<div class="demo">.col-md-2</div>
+			</div>
+		</div>
+		</div>
 
 <div class="container">
 <h1>Set Column Width, md: 6 + 6 / 6 + 6, lg: 4 + 4 + 4 / 12, xl: 3 + 3 + 3 + 3</h1>
