--- a/carousel.html
+++ b/carousel.html
@@ -51,7 +51,8 @@
 </nav>
 
 <!-- End of navigation bar -->
-	
+
+<!-- Start carousel -->	
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -73,7 +74,7 @@
     <span class="sr-only">Next</span>
   </button>
 </div>
-
+<!-- End of carousel -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
