--- a/cards.html
+++ b/cards.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
 <title>Cards</title>
+<!-- Add padding to the top and bottom of the page to element with class attribute 'main' -->
 <style>
 .main{
 padding-top: 20px;
@@ -61,49 +62,47 @@ padding-bottom: 20px;}
 <section class="main">
 	<div class="container">
 		<h1 class="text-center">Heading 1</h1>
-
-
 		<div class="card-deck">
-		<div class="card">
-		<img src="card-placeholder.png" class="card-img-top" alt="place-holder image">
-		<div class="card-body">
-		<h5 class="card-title">Card title</h5>
-		<p class="card-text">This is a longer card with
-		supporting text below as a natural lead-in to
-		additional content. This content is a little bit
-		longer.</p>
-		<p class="card-text"><small class="text-muted">Last
-		updated 3 mins ago</small></p>
-		</div>
-	</div>
+			<div class="card">
+				<img src="card-placeholder.png" class="card-img-top" alt="place-holder image">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">This is a longer card with
+						supporting text below as a natural lead-in to
+						additional content. This content is a little bit
+						longer.</p>
+						<p class="card-text"><small class="text-muted">Last
+						updated 3 mins ago</small></p>
+					</div>
+			</div>
 
- <div class="card">
- <img src="card-placeholder.png" class="card-img-top"
-alt="place-holder image">
- <div class="card-body">
- <h5 class="card-title">Card title</h5>
- <p class="card-text">This card has supporting text
-below as a natural lead-in to additional content.</p>
- <p class="card-text"><small class="text-muted">Last
-updated 3 mins ago</small></p>
- </div>
- </div>
+			 <div class="card">
+				 <img src="card-placeholder.png" class="card-img-top"
+				alt="place-holder image">
+				 <div class="card-body">
+					 <h5 class="card-title">Card title</h5>
+					 <p class="card-text">This card has supporting text
+					below as a natural lead-in to additional content.</p>
+					 <p class="card-text"><small class="text-muted">Last
+					updated 3 mins ago</small></p>
+			 	</div>
+			 </div>
 
- <div class="card">
- <img src="card-placeholder.png" class="card-img-top"
-alt="place-holder image">
- <div class="card-body">
- <h5 class="card-title">Card title</h5>
- <p class="card-text">This is a wider card with
-supporting text below as a natural lead-in to
-additional content. This card has even longer content
-than the first to show that equal height action.</p>
- <p class="card-text"><small class="text-muted">Last
-updated 3 mins ago</small></p>
- </div>
- </div>
- </div><!-- End .card-deck -->
- </div><!-- End .container -->
+			 <div class="card">
+				 <img src="card-placeholder.png" class="card-img-top"
+				alt="place-holder image">
+				 <div class="card-body">
+					 <h5 class="card-title">Card title</h5>
+					 <p class="card-text">This is a wider card with
+					supporting text below as a natural lead-in to
+					additional content. This card has even longer content
+					than the first to show that equal height action.</p>
+					 <p class="card-text"><small class="text-muted">Last
+					updated 3 mins ago</small></p>
+				 </div>
+ 			</div>
+		 </div><!-- End .card-deck -->
+	 </div><!-- End .container -->
  </section><!-- End .main -->
 
     <!-- Optional JavaScript; choose one of the two! -->
